baml_language/crates/baml_tests/snapshots/type_aliases/baml_tests__type_aliases__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR ITEMS ===
function Bar() -> foo {
    true
}

function Foo() -> foo {
    1
}

function Baz() -> Json {
    "hello"
}

type bar = int

type stream.bar = int

type stream.Json = int | float | string | stream.Json[] | map<string, stream.Json>

type stream.foo = stream.bar

type Json = int | float | string | Json[] | map<string, Json>

type foo = bar

function EchoJSON(i: JSON) -> JSON {
    NotJSON { inner: "Whoops" }
}

function MakeJSON(i: NotJSON) -> JSON {
    i.inner
}

class stream.NotJSON {
  inner: null | name
}

class NotJSON {
  inner: name
}

type stream.JSON = int | float | string | bool | stream.JSON[] | map<string, json>

type JSON = int | float | string | bool | JSON[] | map<string, json>
