baml_language/crates/baml_tests/snapshots/type_aliases/baml_tests__type_aliases__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
Skipped: project has diagnostic errors
