baml_language/crates/baml_tests/snapshots/type_aliases/baml_tests__type_aliases__04_tir.snap
---
source: target/debug/build/baml_tests-ddc6647912a5d7c4/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
  Function Bar:
    Return: Bool
    Errors:
      - Expected foo. Found bool
  Function Foo:
    Return: Int
  Function Baz:
    Return: String
  Function EchoJSON:
    Return: Class(ClassId(..), "NotJSON")
    Errors:
      - Expected JSON. Found NotJSON
  Function MakeJSON:
    Return: Named("name")
