baml_language/crates/baml_tests/snapshots/type_aliases/baml_tests__type_aliases__05_diagnostics2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: type mismatch: expected user.foo, got true
    ╭─[ type_aliases.baml:11:3 ]
    │
 11 │   true
    │   ──┬─  
    │     ╰─── type mismatch: expected user.foo, got true
    │ 
    │ Note: Error code: E0001
────╯

  [type] Error: unresolved type: json
   ╭─[ type_aliases_json.baml:1:12 ]
   │
 1 │ type JSON = int | float | string | bool | JSON[] | map<string,json>
   │            ────────────────────────────┬───────────────────────────  
   │                                        ╰───────────────────────────── unresolved type: json
   │ 
   │ Note: Error code: E0002
───╯

  [type] Error: unresolved type: name
   ╭─[ type_aliases_json.baml:4:8 ]
   │
 4 │   inner name
   │        ──┬──  
   │          ╰──── unresolved type: name
   │ 
   │ Note: Error code: E0001
───╯

  [type] Error: unresolved type: name
   ╭─[ type_aliases_json.baml:4:8 ]
   │
 4 │   inner name
   │        ──┬──  
   │          ╰──── unresolved type: name
   │ 
   │ Note: Error code: E0002
───╯
