baml_language/crates/baml_tests/snapshots/type_aliases/baml_tests__type_aliases__06_codegen2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Bar() -> user.foo {
    load_const true
    return
}

function user.Baz() -> user.Json {
    load_const "hello"
    return
}

function user.EchoJSON(i: user.JSON) -> user.JSON {
    alloc_instance NotJSON
    copy 0
    load_const "Whoops"
    store_field .inner
    return
}

function user.Foo() -> user.foo {
    load_const 1
    return
}

function user.MakeJSON(i: user.NotJSON) -> user.JSON {
    load_var i
    load_field .inner
    return
}
